--- a/h.html
+++ b/h.html
@@ -42,7 +42,7 @@
         </section>
         <section id="contact" class="content">
             <h2>Contact</h2>
-            <p>For any inquiries or feedback, please email us at <a href="mailto:mummadibharath9966@gmail.com">MAIL</a></p>
+            <p>For any inquiries or feedback, please email us at <a href="mailto:m7261154@gmail.com">MAIL</a></p>
         </section>
     </main>
     <footer>
@@ -52,7 +52,7 @@
             <p class="disclaimer">
                 CineNest does not host any of the files displayed on this website. All content is provided by third-party file hosting services. We do not own, control, or upload any media files. Contact the hosting provider directly for any concerns.
             </p>
-            <p>visit this site for the code -> <a href="https://github.com/Bharath6911/CineNest">SourceCode</a> </p>     
+            <p>visit this site for the code -> <a href="https://bharath6911.github.io/CineNest/">SourceCode</a> </p>     
         </center>
     </footer>
 
