--- a/player.html
+++ b/player.html
@@ -12,6 +12,10 @@
             <h1>CineNest</h1>
         </div>
     </header>
+    <div id="loadingSpinner" class="loading-spinner">
+        <div class="spinner"></div>
+        <p>Loading...</p>
+    </div>
     <main>
         <div class="video-player-container">
             <video id="videoPlayer" controls autoplay>
