--- a/h.html
+++ b/h.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineNest - Your Streaming Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+    div a {
+    margin: 5px;
+    text-decoration: none;
+    font-size: 35px;
+    color: #555;
+  }
+  div a:hover {
+    color: #000;
+  }
+    </style>
 </head>
 <body>
     <header>
@@ -48,6 +60,12 @@
         <section id="contact" class="content">
             <h2>Contact</h2>
             <p>For any inquiries or feedback, please email us at <a href="mailto:drawinga36@gmail.com">MAIL</a></p>
+             <center><div>
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://bharath6911.github.io/CineNest/log.html" target="_blank"><i class="fab fa-facebook"></i></a>
+  <a href="https://wa.me/?text=https://bharath6911.github.io/CineNest/log.html" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://t.me/share/url?url=https://bharath6911.github.io/CineNest/log.html&text=Check%20this%20out!" target="_blank"><i class="fab fa-telegram"></i></a>
+  <a href="https://twitter.com/intent/tweet?url=https://bharath6911.github.io/CineNest/log.html&text=Check%20this%20out!" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div></center>
         </section>
     </main>
     <footer>
