--- a/log.html
+++ b/log.html
@@ -109,7 +109,13 @@
 const users = [
     { username: 'admin', password: 'password' },
     { username: 'user1', password: 'user123' },
-    { username: 'guest', password: 'guest123' }
+    { username: 'guest', password: 'guest123' },
+    { username: 'Bharath', password: '1234' },
+    { username: 'chandi', password: '1234' },
+    { username: 'kunal', password: '1234' },
+    { username: 'Nithin', password: '1234' },
+    { username: 'Balaji', password: '1234' },
+
 ];
 
 document.getElementById('loginForm').addEventListener('submit', function (e) {
