--- a/log.html
+++ b/log.html
@@ -80,7 +80,6 @@
         <p id="errorMessage" class="error"></p>
     </div>
     <div class="poster-container">
-        <!-- Row 1 -->
         <div class="poster-row row-left">
           <img src="image\img1.jpg" alt="Poster 1">
           <img src="image\img2.jpg" alt="Poster 2">
@@ -88,7 +87,6 @@
           <img src="image\img4.jpg" alt="Poster 4">
           <img src="image\img5.jpg" alt="Poster 5">
         </div>
-        <!-- Row 2 -->
         <div class="poster-row row-right">
           <img src="image\img6.jpg" alt="Poster 6">
           <img src="image\img7.jpg" alt="Poster 7">
@@ -96,7 +94,6 @@
           <img src="image\img9.jpg" alt="Poster 9">
           <img src="image\img10.jpg" alt="Poster 10">
         </div>
-        <!-- Row 3 -->
         <div class="poster-row row-left">
           <img src="image\img11.jpg" alt="Poster 11">
           <img src="image\img12.jpg" alt="Poster 12">
@@ -121,23 +118,23 @@ const users = [
 document.getElementById('loginForm').addEventListener('submit', function (e) {
     e.preventDefault();
 
-    const username = document.getElementById('username').value.trim(); // Trim spaces
+    const username = document.getElementById('username').value.trim(); 
     const password = document.getElementById('password').value;
     const errorMessage = document.getElementById('errorMessage');
 
-    console.log('Username entered:', username); // Debug log
-    console.log('Password entered:', password); // Debug log
+    console.log('Username entered:', username);
+    console.log('Password entered:', password);
 
-    // Validate credentials
+    // Validate inputs
     const user = users.find(u => u.username === username && u.password === password);
 
     if (user) {
-        console.log('User found:', user); // Debug log
+        console.log('User found:', user); 
         localStorage.setItem('isLoggedIn', 'true');
-        localStorage.setItem('username', username); // Save user data
-        window.location.href = 'h.html'; // Redirect to main page
+        localStorage.setItem('username', username); 
+        window.location.href = 'h.html'; 
     } else {
-        console.log('Invalid login attempt'); // Debug log
+        console.log('Invalid login attempt'); 
         errorMessage.textContent = 'Invalid username or password.';
         errorMessage.style.display = 'block';
     }
