--- a/h.html
+++ b/h.html
@@ -61,10 +61,10 @@
             <h2>Contact</h2>
             <p>For any inquiries or feedback, please email us at <a href="mailto:drawinga36@gmail.com">MAIL</a></p>
              <center><div>
-  <a href="https://www.facebook.com/sharer/sharer.php?u=https://bharath6911.github.io/CineNest/log.html" target="_blank"><i class="fab fa-facebook"></i></a>
-  <a href="https://wa.me/?text=https://bharath6911.github.io/CineNest/log.html" target="_blank"><i class="fab fa-whatsapp"></i></a>
-  <a href="https://t.me/share/url?url=https://bharath6911.github.io/CineNest/log.html&text=Check%20this%20out!" target="_blank"><i class="fab fa-telegram"></i></a>
-  <a href="https://twitter.com/intent/tweet?url=https://bharath6911.github.io/CineNest/log.html&text=Check%20this%20out!" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://cinenest.onrender.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+  <a href="https://wa.me/?text=https://cinenest.onrender.com/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://t.me/share/url?url=https://cinenest.onrender.com/&text=Check%20this%20out!" target="_blank"><i class="fab fa-telegram"></i></a>
+  <a href="https://twitter.com/intent/tweet?url=https://cinenest.onrender.com/&text=Check%20this%20out!" target="_blank"><i class="fab fa-twitter"></i></a>
             </div></center>
         </section>
     </main>
