--- a/player.html
+++ b/player.html
@@ -19,6 +19,7 @@
     <main>
         <div class="video-player-container">
             <video id="videoPlayer" controls autoplay>
+                <iframe src="https://streamtape.com/e/92vKMzJX2mS18M/" width="800" height="600" allowfullscreen allowtransparency allow="autoplay" scrolling="no" frameborder="0"></iframe>
                 Your browser does not support the video tag.
             </video>
         </div>
