--- a/h.html
+++ b/h.html
@@ -70,7 +70,9 @@
     </main>
     <footer>
         <center>
-            <p>&copy; 2024 CineNest. All Rights Reserved.</p>
+            <p>&copy; 2024 CineNest. All Rights Reserved.</p> 
+
+            <br><button id="logoutButton" class="highlight-button">Logout</button></br>
              
             <p class="disclaimer">
                 CineNest does not host any of the files displayed on this website. All content is provided by third-party file hosting services. We do not own, control, or upload any media files. Contact the hosting provider directly for any concerns.
