--- a/h.html
+++ b/h.html
@@ -30,6 +30,7 @@
                 <li><a href="#movies">Movies</a></li>
                 <li><a href="#series">Series</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="notcartoon.html">FullAnimeMode</a></li>
                 
             </ul>
         </nav>
@@ -81,7 +82,6 @@
         </center>
     </footer>
 
-    <!-- Video Modal -->
     <div id="videoModal" class="modal">
         <div class="modal-content">
             <span id="closeModal" class="close">&times;</span>
@@ -97,7 +97,6 @@
             <h3>Select Genres</h3>
             <form id="genreForm">
                 <div id="genreList">
-                    <!-- Add your genres here as labels with checkboxes -->
                     <label>
                         <input type="checkbox" name="genre" value="28"> Action
                     </label>
