--- a/player.html
+++ b/player.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 
-                <li><a href="#home">Home</a></li>
+                <li><a href="h.html">Back To Home</a></li>
                 <li><a href="#movies">Movies</a></li>
                 <li><a href="#series">Series</a></li>
                 <li><a href="#contact">Contact</a></li>
