--- a/h.html
+++ b/h.html
@@ -34,9 +34,13 @@
             </ul>
         </nav>
         <nav>
+
             <button id="genreButton" class="highlight-button">Genres</button>
-             
+
         </nav>
+
+            <div id="google_translate_element" class="translate"></div> 
+
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search for movies or series...">
             <button id="micButton">
@@ -144,5 +148,23 @@
         </div>
     </div>
     <script src="j.js"></script>
+    <script>
+  function changeLanguage(lang) {
+      var translateDropdown = document.querySelector(".goog-te-combo");
+      if (translateDropdown) {
+          translateDropdown.value = lang;
+          translateDropdown.dispatchEvent(new Event("change"));
+      }
+  }
+  function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+          pageLanguage: 'en',
+          includedLanguages: 'te,hi,fr,ar',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+  }
+</script>
+
+<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
