--- a/h.html
+++ b/h.html
@@ -7,6 +7,52 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+    /* Google Translate Button Styling */
+.translate {
+    display: inline-block;
+    background-color: rgb(37, 150, 190); 
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.2s;
+    text-align: center;
+}
+
+/* Hover Effect */
+.translate:hover {
+    background-color: rgb(30, 120, 160);
+    transform: scale(1.05);
+}
+
+/* Remove Google Translate Logo */
+.goog-logo-link,
+.goog-te-gadget span {
+    display: none !important;
+}
+
+/* Remove Unnecessary White Background */
+.goog-te-gadget {
+    color: transparent !important;
+}
+
+/* Ensure Dropdown Stays Visible */
+.goog-te-combo {
+    display: inline-block;
+    background: none;
+    color: white;
+    border: 1px solid white;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.goog-te-combo:focus {
+    outline: none;
+}
+        
     div a {
     margin: 5px;
     text-decoration: none;
