--- a/h.html
+++ b/h.html
@@ -205,7 +205,7 @@
   function googleTranslateElementInit() {
       new google.translate.TranslateElement({
           pageLanguage: 'en',
-          includedLanguages: 'te,hi,fr,ar',
+          includedLanguages: 'te,hi,fr,ar,es,zh-CN,zh-TW,ru,ja,de,ko,it,pt,tr,bn,ta,ur,fa,vi',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
       }, 'google_translate_element');
   }
