--- a/h.html
+++ b/h.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+     .container22{
+      display:flex;
+      column-gap:5px;
+     }
     /* Google Translate Button Styling */
 .translate {
     display: inline-block;
@@ -79,6 +83,7 @@
                 
             </ul>
         </nav>
+        <div class="container22">
         <nav>
 
             <button id="genreButton" class="highlight-button">Genres</button>
@@ -87,6 +92,7 @@
 
             <div id="google_translate_element" class="translate"></div> 
 
+        </div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search for movies or series...">
             <button id="micButton">
