--- a/player.html
+++ b/player.html
@@ -80,7 +80,7 @@
 
         </nav>
 
-            <div id="google_translate_element" class="translate"></div> 
+            <div id="google_translate_element" class="translate">powered by Google Translate</div> 
 
         </div>
         <div class="search-bar">
