--- a/player.html
+++ b/player.html
@@ -80,7 +80,7 @@
 
         </nav>
 
-            <div id="google_translate_element" class="translate">powered by Google Translate</div> 
+            <div id="google_translate_element" class="translate"></div> 
 
         </div>
         <div class="search-bar">
@@ -120,7 +120,8 @@
     </main>
     <footer>
         <center>
-            <p>&copy; 2024 CineNest. All Rights Reserved.</p>
+            <p>&copy; 2024 CineNest.
+            <br>powered by Google Translate</p>
              
             <p class="disclaimer">
                 CineNest does not host any of the files displayed on this website. All content is provided by third-party file hosting services. We do not own, control, or upload any media files. Contact the hosting provider directly for any concerns.
