--- a/h.html
+++ b/h.html
@@ -11,7 +11,7 @@
       display:flex;
       column-gap:5px;
      }
-    /* Google Translate Button Styling */
+    /* Google Translate div Styling */
 .translate {
     display: inline-block;
     background-color: rgb(37, 150, 190); 
@@ -128,7 +128,11 @@
     </main>
     <footer>
         <center>
-            <p>&copy; 2024 CineNest. All Rights Reserved.</p> 
+            <p>&copy; 2024 CineNest.
+            <br>powered by Google translate 
+            <br>Project Done By 
+            <br>•Bharath Mummadi 
+            <br>•Nithin</p> 
 
             <p class="disclaimer">
                 CineNest does not host any of the files displayed on this website. All content is provided by third-party file hosting services. We do not own, control, or upload any media files. Contact the hosting provider directly for any concerns.
@@ -211,7 +215,7 @@
   function googleTranslateElementInit() {
       new google.translate.TranslateElement({
           pageLanguage: 'en',
-          includedLanguages: 'te,hi,fr,ar,es,zh-CN,zh-TW,ru,ja,de,ko,it,pt,tr,bn,ta,ur,fa,vi',
+          includedLanguages: 'te,hi,fr,ar,es,zh-CN,zh-TW,ru,ja,de,ko,it,pt,tr,bn,ta,ur,fa,vi,ms,tcy,lus,bhb,gon',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
       }, 'google_translate_element');
   }
