--- a/player.html
+++ b/player.html
@@ -141,7 +141,7 @@
   function googleTranslateElementInit() {
       new google.translate.TranslateElement({
           pageLanguage: 'en',
-          includedLanguages: 'te,hi,fr,ar,es,zh-CN,zh-TW,ru,ja,de,ko,it,pt,tr,bn,ta,ur,fa,vi',
+          includedLanguages: 'te,hi,fr,ar,es,zh-CN,zh-TW,ru,ja,de,ko,it,pt,tr,bn,ta,ur,fa,vi,ms,tcy,lus,bhb,gon',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
       }, 'google_translate_element');
   }
