--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=log.html">
+    <meta http-equiv="refresh" content="0; URL=https://cinenest.great-site.net">
   </head>
   <body>
   </body>
