--- a/log.html
+++ b/log.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CineNest</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="image/logo.png" >
     <style>
      body {
       font-family: Arial, sans-serif;
